--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "node": "24.11.1"
   },
   "dependencies": {
+    "@jpyc/sdk-core": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "soltypes": "^2.0.0",
     "viem": "^2.39.3"
   },
   "devDependencies": {
